--- a/css/layout.css
+++ b/css/layout.css
@@ -214,7 +214,7 @@ ul#nav li.current a { color: #ff0000; }
    position: relative;
    width: 180px;
    height: 220px;
-   border-radius: 0;
+   border-radius: 50%;
 }
 #about .contact-details { width: 41.66667%; }
 #about .download {
